[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Doors.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Doors/moldur.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Doors/closed_door.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Doors/door.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 110 )

[node name="Doors" type="Node2D"]
script = ExtResource( 1 )

[node name="RigidBody2D" type="StaticBody2D" parent="."]

[node name="door_frame" type="Sprite" parent="RigidBody2D"]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="closed_doors" type="Sprite" parent="RigidBody2D"]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )

[node name="open_door_far" type="Sprite" parent="RigidBody2D"]
visible = false
position = Vector2( -135.465, -62.5884 )
texture = ExtResource( 4 )

[node name="open_door_near" type="Sprite" parent="RigidBody2D"]
visible = false
position = Vector2( -10.2885, 61.731 )
z_index = 2
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 25, 0 )
shape = SubResource( 1 )

